--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+h1{
+  font-size: 50px;
+}
+dd{
+  font-size: 2rem;
+  font-weight:bold;
+}
+
